# tdf

./: .gitignore  dagster_cloud.yaml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: branch_deployments.yml  deploy.yml
analytics/: .gitignore  dbt_project.yml  packages.yml  profiles.yml
analytics/macros/: haversine.sql
analytics/models/: generated_sources.yml  models.yml  race.sql  stages_duration_per_rider.sql  stages_metrics.sql  stages_results_per_rider.sql  stg_race.sql  stg_riders.sql  stg_stages.sql  stg_stages_info.sql
analytics/models/staging/: staging.yml  stg_race.sql  stg_riders.sql  stg_stages_gpx.sql  stg_stages_info.sql
tdf/: __init__.py  assets.py  contracts.py  contracts.yml  dbt.py  io_manager.py  resources.py
tdf/assets/: __init__.py  dbt.py  drift.py  extract.py
tdf/data/stages/: 01.csv  02.csv  03.csv  04.csv  05.csv  06.csv  07.csv  08.csv  09.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  20.csv  21.csv
tdf/helpers/: dbt.py
