[tool.poetry]
name = "tdf"
version = "0.1.0"
description = ""
authors = ["Christophe Blefari <hi@blef.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
dagster-webserver = "^1.4.6"
dagster = "^1.4.6"
pandas = "^2.0.3"
psycopg2-binary = "^2.9.7"
dagster-pandas = "^0.20.7"
dagster-gcp = "^0.20.7"
gcsfs = "^2023.6.0"
dagster-dbt = "^0.20.7"
dbt-duckdb = "^1.6.0"
bdp-contracts = "^0.1.0"

[tool.poetry.dev-dependencies]
isort = "^5.12.0"
black = "^23.7.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "tdf"

[tool.isort]
profile = "black"
